@@ -1,3 +1,7 @@
+2003-12-08  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.2-cvs-b55
+
+	* Added first draft of alindeman's Gallery Host Compatibility Checker
+
 2003-12-06  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.2-cvs-b54
 
 	* Fixed bug where rotated images don't have their size update if 
